--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,14 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/splash_background"
     tools:context=".ui.splash.SplashActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txt_loodos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="loodos"
+        android:textSize="25dp"
+        android:textColor="@color/splash_text_color"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
